--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@element-plus/icons": "^0.0.11",
     "core-js": "^3.8.3",
-    "element-plus": "^1.0.2-beta.28",
-    "vue": "^3.2.13",
+    "element-plus": "^2.2.6",
+    "vue": "^3.2.37",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
@@ -31,7 +32,9 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
     "husky": "^8.0.1",
+    "node-sass": "^7.0.1",
     "prettier": "^2.4.1",
+    "sass-loader": "^13.0.2",
     "vue-cli-plugin-element-plus": "~0.0.13"
   },
   "config": {
