--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "node-sass": "^7.0.1",
     "prettier": "^2.4.1",
     "sass-loader": "^13.0.2",
+    "svg-sprite-loader": "^6.0.11",
     "vue-cli-plugin-element-plus": "~0.0.13"
   },
   "config": {
