--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@element-plus/icons": "^0.0.11",
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "element-plus": "^2.2.6",
+    "md5": "^2.3.0",
     "vue": "^3.2.37",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
