--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.8.3",
     "element-plus": "^2.2.6",
     "md5": "^2.3.0",
+    "path-browserify": "^1.0.1",
     "vue": "^3.2.37",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
