--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "md5": "^2.3.0",
     "path-browserify": "^1.0.1",
     "vue": "^3.2.37",
+    "vue-i18n": "^9.2.0-beta.36",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
