--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "md5": "^2.3.0",
     "path-browserify": "^1.0.1",
     "rgb-hex": "^4.0.0",
+    "screenfull": "^6.0.2",
     "vue": "^3.2.37",
     "vue-i18n": "^9.2.0-beta.36",
     "vue-router": "^4.0.3",
