--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.8.3",
     "css-color-function": "^1.3.3",
     "element-plus": "^2.2.6",
+    "fuse.js": "^6.6.2",
     "md5": "^2.3.0",
     "path-browserify": "^1.0.1",
     "rgb-hex": "^4.0.0",
