--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "css-color-function": "^1.3.3",
+    "dayjs": "^1.11.3",
     "driver.js": "^0.9.8",
     "element-plus": "^2.2.6",
     "fuse.js": "^6.6.2",
@@ -24,7 +25,8 @@
     "vue": "^3.2.37",
     "vue-i18n": "^9.2.0-beta.36",
     "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
