--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "screenfull": "^6.0.2",
     "vue": "^3.2.37",
     "vue-i18n": "^9.2.0-beta.36",
+    "vue-print-nb": "^1.7.5",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0",
     "xlsx": "^0.18.5"
