--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@antv/s2": "^1.22.0",
     "@element-plus/icons": "^0.0.11",
     "@element-plus/icons-vue": "^2.0.6",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "countup.js": "^2.3.1",
     "css-color-function": "^1.3.3",
     "dayjs": "^1.11.3",
     "driver.js": "^0.9.8",
+    "echarts": "^5.3.3",
+    "echarts-wordcloud": "^2.0.0",
     "element-plus": "^2.2.6",
     "file-saver": "^2.0.5",
     "fuse.js": "^6.6.2",
